After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 763488 - ui: Suppress CSS warnings for GTK+ 3.20
ui: Suppress CSS warnings for GTK+ 3.20
Status: RESOLVED FIXED
Product: gcr
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-03-11 03:16 UTC by Daiki Ueno
Modified: 2019-02-22 11:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
ui: Suppress CSS warnings for GTK+ 3.20 (1.94 KB, patch)
2016-03-11 03:16 UTC, Daiki Ueno
none Details | Review

Description Daiki Ueno 2016-03-11 03:16:39 UTC
--
Running gcr-viewer from jhbuild shell, I get warnings like:

(lt-gcr-viewer:7409): Gtk-WARNING **: State 36 for GcrDisplayView 0xd62540 doesn't match state 224 set via gtk_style_context_set_state ()

(lt-gcr-viewer:7409): Gtk-WARNING **: State 36 for GcrDisplayView 0xd62540 doesn't match state 224 set via gtk_style_context_set_state ()

(lt-gcr-viewer:7409): Gtk-WARNING **: State 36 for GcrDisplayView 0xd62540 doesn't match state 224 set via gtk_style_context_set_state ()
Comment 1 Daiki Ueno 2016-03-11 03:16:42 UTC
Created attachment 323678 [details] [review]
ui: Suppress CSS warnings for GTK+ 3.20

If STATE argument of gtk_style_context_get*() doesn't match with the
CONTEXT's state, it shows warnings like:

  State 36 for GcrDisplayView 0xd62540 doesn't match state 160 set via
  gtk_style_context_set_state ()

To suppress those warnings, add gtk_style_context_save() and _restore()
around the calls.  Based on the information from:
http://feaneron.com/2016/01/04/quick-guide-to-port-an-app-for-gtk-3-20/
Comment 2 Stef Walter 2016-03-15 16:24:31 UTC
Thanks. Merged into master.

Attachment 323678 [details] pushed as 5db6fe1 - ui: Suppress CSS warnings for GTK+ 3.20