ui: Suppress CSS warnings for GTK+ 3.20

If STATE argument of gtk_style_context_get*() doesn't match with the
CONTEXT's state, it shows warnings like:

  State 36 for GcrDisplayView 0xd62540 doesn't match state 160 set via
  gtk_style_context_set_state ()

To suppress those warnings, add gtk_style_context_save() and _restore()
around the calls.  Based on the information from:
http://feaneron.com/2016/01/04/quick-guide-to-port-an-app-for-gtk-3-20/

https://bugzilla.gnome.org/show_bug.cgi?id=763488